--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@
 /* Definition of the design system. All colors, gradients, fonts, etc should be defined here. 
 All colors MUST be HSL.
 */
+* {
+  caret-color: transparent; 
+}
 
 @layer base {
   :root {
